--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -183,7 +183,7 @@
                             <h6 class="text-white mb-0">Sunday</h6>
                             <p class="mb-0"> 8:00am - 5:00pm</p>
                         </div>
-                        <a class="btn btn-light" href="">Appointment</a>
+                        <a class="btn btn-light" href="appointment.html">Appointment</a>
                     </div>
                 </div>
                 <div class="col-lg-4 wow zoomIn" data-wow-delay="0.3s">
@@ -397,7 +397,7 @@
                         <h1 class="display-5 text-white">Save 30% On Your First Dental Checkup</h1>
                         <p class="text-white mb-4">Enjoy the August-September discount of 30% on all treatments.</p>
                         <a href="appointment.html" class="btn btn-dark py-3 px-5 me-3">Appointment</a>
-                        <a href="" class="btn btn-light py-3 px-5">Read More</a>
+                        <a href="about.html" class="btn btn-light py-3 px-5">Read More</a>
                     </div>
                 </div>
             </div>
